--- a/findEmoStrength1st.html
+++ b/findEmoStrength1st.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜我的情緒強度</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-5db2fbf5.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-2dd4feed.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-b0d79f50.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-fdf55335.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -77,7 +77,7 @@
 
             <!-- title bar -->
             <div class="titleBar d-lg-flex justify-content-between align-items-center">
-                <h2>我的情緒強度</h2>
+                <h2>我的情緒強度｜第一次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="myEmoCardsHolder.html">上一步</a>
                     <a class="ms-16 btn btn-main c-btn" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
@@ -107,32 +107,32 @@
                     </button>
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength01" id="emo01Point01" value="1">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point01" value="1">
                             <label for="emo01Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength01" id="emo01Point02" value="2">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point02" value="2">
                             <label for="emo01Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength01" id="emo01Point03" value="3">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point03" value="3">
                             <label for="emo01Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength01" id="emo01Point04" value="4">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point04" value="4">
                             <label for="emo01Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength01" id="emo01Point05" value="5">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point05" value="5">
                             <label for="emo01Point05" class="form-label text-strength ">
                                 5
                             </label>
@@ -150,32 +150,32 @@
                     </button>
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength02" id="emo02Point01" value="1">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point01" value="1">
                             <label for="emo02Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength02" id="emo02Point02" value="2">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point02" value="2">
                             <label for="emo02Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength02" id="emo02Point03" value="3">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point03" value="3">
                             <label for="emo02Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength02" id="emo02Point04" value="4">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point04" value="4">
                             <label for="emo02Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength02" id="emo02Point05" value="5">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point05" value="5">
                             <label for="emo02Point05" class="form-label text-strength ">
                                 5
                             </label>
@@ -193,32 +193,32 @@
                     </button>
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength03" id="emo03Point01" value="1">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point01" value="1">
                             <label for="emo03Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength03" id="emo03Point02" value="2">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point02" value="2">
                             <label for="emo03Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength03" id="emo03Point03" value="3">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point03" value="3">
                             <label for="emo03Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength03" id="emo03Point04" value="4">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point04" value="4">
                             <label for="emo03Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
-                        <div class="box-point">
-                            <input type="radio" class="btn-strength" name="emoStrength03" id="emo03Point05" value="5">
+                        <div>
+                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point05" value="5">
                             <label for="emo03Point05" class="form-label text-strength ">
                                 5
                             </label>
