--- a/pages/findEmoBackground.html
+++ b/pages/findEmoBackground.html
@@ -47,7 +47,7 @@
                 <h2>我的情緒故事｜背景篇</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoStrength1st.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn" href="findEmoAction.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
@@ -67,13 +67,13 @@
                                 <p class="mb-4 text-main fw-500  fs-7">
                                     邀請你輕輕地闔上雙眼，在呼吸的吸吐之間，慢慢地回想，<br>在感受到「ＸＸ、ＸＸ、ＸＸ」的情緒前，發生了什麼事情呢？
                                 </p>
-                                <p class="text-gray-550 fs-7">
+                                <p class="text-gray-550 fs-8">
                                     請在下欄中，試著寫下在感受到「ＸＸ、ＸＸ、ＸＸ」情緒的原因、事情、背景故事等。
                                 </p>
                             </label>
                             <textarea class="w-100 mb-12 p-12 border rounded border-gray-500 text-gray-900" id="whatHappened" name="whatHappened"></textarea>
                         </div>
-                        <div class="col-3 pe-0 d-flex justify-content-end">
+                        <div class="col-3 d-flex justify-content-end">
                             <img class="d-block" src="../assets/images/emoStory/lime-diving.svg" alt="a man is diving">
                         </div>
                     </div>
@@ -83,7 +83,7 @@
             <!-- 圖片引用來源 -->
             <div class="text-end mb-64">
                 <span class="text-gray-500 fs-11">
-                    Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations">Ouch!</a>
+                    Illustration by <a class="link-gray-500" href="https://icons8.com/illustrations/author/iAdLsFJOKDrk" target="_blank">Tanya Krasutska</a> from <a class="link-gray-500" href="https://icons8.com/illustrations" target="_blank">Ouch!</a>
                 </span>
             </div>
         </div>
