--- a/findEmoStrength2nd.html
+++ b/findEmoStrength2nd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>浪潮情緒卡｜找尋我的情緒｜我的情緒強度</title>
+    <title>浪潮情緒卡｜找尋我的情緒｜我的情緒強度2nd</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script type="module" crossorigin src="/wavemocards/assets/main-d4a50e68.js"></script>
@@ -51,21 +51,21 @@
                 <div class="progressBar mt-16 mb-8 px-12">
                     <div class="position-relative m-4">
                         <div class="progress" style="height: 2px;">
-                            <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 20%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar bg-main-tint01" role="progressbar" style="width: 80%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <div class="p-num position-absolute top-0 start-0 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
                             <span class="d-block">1</span>
                         </div>
-                        <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
+                        <div class="p-num position-absolute top-0 start-20 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
                             <span class="d-block">2</span>
                         </div>
-                        <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                        <div class="p-num position-absolute top-0 start-40 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
                             <span class="d-block">3</span>
                         </div>
-                        <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                        <div class="p-num position-absolute top-0 start-60 translate-middle btn btn-sm btn-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
                             <span class="d-block">4</span>
                         </div>
-                        <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
+                        <div class="p-num position-absolute top-0 start-80 translate-middle btn btn-sm btn-outline-main-tint01 rounded-pill d-flex justify-content-center align-items-center">
                             <span class="d-block">5</span>
                         </div>
                         <div class="p-num position-absolute top-0 start-100 translate-middle btn btn-sm btn-outline-gray-450 rounded-pill d-flex justify-content-center align-items-center">
@@ -77,21 +77,21 @@
 
             <!-- title bar -->
             <div class="titleBar d-lg-flex justify-content-between align-items-center">
-                <h2>我的情緒強度｜第一次</h2>
+                <h2>我的情緒強度｜第二次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
-                    <a class="btn btn-outline-main c-btn" href="myEmoCardsHolder.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
+                    <a class="btn btn-outline-main c-btn" href="findEmoAction.html">上一步</a>
+                    <a class="ms-16 btn btn-main c-btn" href="findThanks.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
+            <!-- <p class="mb-4 text-gray-550">
+                謝謝親愛的ＯＯ為了自己，花了時間與心思做覺察、紀錄與省思。
+            </p> -->
             <p class="mb-4 text-gray-550 fs-7">
-                謝謝親愛的ＯＯ努力的尋找到屬於自己的情緒卡。
+                親愛的ＯＯ，在靜下來覺察與記錄自己的情緒故事後，不知道你現在的情緒還好嗎？
             </p>
-            <p class="mb-4 text-gray-550 fs-7">
-                在進入下一步前，想邀請ＯＯ，先 <span class="text-main fw-500">閉上眼睛，深呼吸～吐氣～</span>
-            </p>
-            <p class="mb-40 text-gray-550 fs-7">
-                並在深呼吸的過程中，問問心中的自己，<span class="text-main fw-500">剛剛挑選的情緒，其強度分別如何呢？</span><span class="fs-8">（1分代表最為微弱，5分代表最為強烈）</span>
+            <p  class="mb-40 text-main fs-7 fw-500">
+                邀請你再次深呼吸，並問問心中的自己，現在的情緒強度分別如何呢？<span class="text-gray-550 fs-8 fw-400">（1分代表最為微弱，5分代表最為強烈）</span>
             </p>
 
             <!-- 尚未設定form action內濃 -->
