--- a/findEmoStrength1st.html
+++ b/findEmoStrength1st.html
@@ -108,32 +108,32 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point01" value="1">
-                            <label for="emo01Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point01" value="1">
+                            <label for="1stEmo01Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point02" value="2">
-                            <label for="emo01Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point02" value="2">
+                            <label for="1stEmo01Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point03" value="3">
-                            <label for="emo01Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point03" value="3">
+                            <label for="1stEmo01Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point04" value="4">
-                            <label for="emo01Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point04" value="4">
+                            <label for="1stEmo01Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength01" id="emo01Point05" value="5">
-                            <label for="emo01Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point05" value="5">
+                            <label for="1stEmo01Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
@@ -151,32 +151,32 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point01" value="1">
-                            <label for="emo02Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point01" value="1">
+                            <label for="1stEmo02Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point02" value="2">
-                            <label for="emo02Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point02" value="2">
+                            <label for="1stEmo02Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point03" value="3">
-                            <label for="emo02Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point03" value="3">
+                            <label for="1stEmo02Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point04" value="4">
-                            <label for="emo02Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point04" value="4">
+                            <label for="1stEmo02Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength02" id="emo02Point05" value="5">
-                            <label for="emo02Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st02" id="1stEmo02Point05" value="5">
+                            <label for="1stEmo02Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
@@ -194,32 +194,32 @@
                     <!-- point -->
                     <div class="box-strength d-flex justify-content-between align-items-center">
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point01" value="1">
-                            <label for="emo03Point01" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point01" value="1">
+                            <label for="1stEmo03Point01" class="form-label text-strength ">
                                 1
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point02" value="2">
-                            <label for="emo03Point02" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point02" value="2">
+                            <label for="1stEmo03Point02" class="form-label text-strength ">
                                 2
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point03" value="3">
-                            <label for="emo03Point03" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point03" value="3">
+                            <label for="1stEmo03Point03" class="form-label text-strength ">
                                 3
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point04" value="4">
-                            <label for="emo03Point04" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point04" value="4">
+                            <label for="1stEmo03Point04" class="form-label text-strength ">
                                 4
                             </label>
                         </div>
                         <div>
-                            <input type="radio" class="d-none" name="emoStrength03" id="emo03Point05" value="5">
-                            <label for="emo03Point05" class="form-label text-strength ">
+                            <input type="radio" class="d-none" name="emoStrength1st03" id="1stEmo03Point05" value="5">
+                            <label for="1stEmo03Point05" class="form-label text-strength ">
                                 5
                             </label>
                         </div>
