--- a/pages/findEmoStrength2nd.html
+++ b/pages/findEmoStrength2nd.html
@@ -47,21 +47,18 @@
                 <h2>我的情緒強度｜第二次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoAction.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findThanks.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findThanks.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
-            <!-- <p class="mb-4 text-gray-550">
-                謝謝親愛的ＯＯ為了自己，花了時間與心思做覺察、紀錄與省思。
-            </p> -->
             <p class="mb-4 text-gray-550 fs-7">
                 親愛的ＯＯ，在靜下來覺察與記錄自己的情緒故事後，不知道你現在的情緒還好嗎？
             </p>
             <p  class="mb-40 text-main fs-7 fw-500">
-                邀請你再次深呼吸，並問問心中的自己，現在的情緒強度分別如何呢？<span class="text-gray-550 fs-8 fw-400">（1分代表最為微弱，5分代表最為強烈）</span>
+                邀請你再次深呼吸，並問問心中的自己，現在的情緒強度分別如何呢？<span class="text-gray-550 fs-8 fw-400">（ 1分代表最為微弱，5分代表最為強烈 ）</span>
             </p>
 
-            <!-- 尚未設定form action內濃 -->
+            <!-- 尚未設定form action內容 -->
             <form action="#">
                 <!-- 1 card & point -->
                 <div class="mb-24 d-flex justify-content-between">
