--- a/pages/myEmoCardsHolder.html
+++ b/pages/myEmoCardsHolder.html
@@ -47,7 +47,7 @@
                 <h2>我的情緒卡夾</h2>
                 <div class="nav-btn d-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoClassified.html">回到情緒卡</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findEmoStrength1st.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoStrength1st.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
