--- a/findEmoBackground.html
+++ b/findEmoBackground.html
@@ -80,7 +80,7 @@
                 <h2>我的情緒故事｜背景篇</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoStrength1st.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findEmoAction.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoAction.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
