--- a/findEmoStrength1st.html
+++ b/findEmoStrength1st.html
@@ -80,7 +80,7 @@
                 <h2>我的情緒強度｜第一次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="myEmoCardsHolder.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                 在進入下一步前，想邀請ＯＯ，先 <span class="text-main fw-500">閉上眼睛，深呼吸～吐氣～</span>
             </p>
             <p class="mb-40 text-gray-550 fs-7">
-                並在深呼吸的過程中，問問心中的自己，<span class="text-main fw-500">剛剛挑選的情緒，其強度分別如何呢？</span><span class="fs-8">（1分代表最為微弱，5分代表最為強烈）</span>
+                並在深呼吸的過程中，問問心中的自己，<span class="text-main fw-500">剛剛挑選的情緒，其強度分別如何呢？</span><span class="fs-8">（ 1分代表最為微弱，5分代表最為強烈 ）</span>
             </p>
 
             <!-- 尚未設定form action內濃 -->
