--- a/pages/findMyEmotions.html
+++ b/pages/findMyEmotions.html
@@ -37,7 +37,7 @@
           <img class="default" src="../assets/images/findEmoClassified.svg" alt="分類探索">
           <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
         </a>
-        <a class="btn-find d-flex flex-column align-items-center" href="findEmoClassified.html">
+        <a class="btn-find d-flex flex-column align-items-center" href="findEmoUnclassified.html">
           <h2>自由探索</h2>
           <img class="default" src="../assets/images/finEmoFree.svg" alt="自由探索">
           <img class="hover" src="../assets/images/findEmoClassifiedHover.svg" alt="分類探索">
