--- a/findEmoClassified.html
+++ b/findEmoClassified.html
@@ -7,8 +7,8 @@
         <title>浪潮情緒卡｜找尋我的情緒｜分類探索</title>
         <!-- Bootstrap icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-      <script type="module" crossorigin src="/wavemocards/assets/main-d4a50e68.js"></script>
-      <link rel="stylesheet" href="/wavemocards/assets/main-fb47b27b.css">
+      <script type="module" crossorigin src="/wavemocards/assets/main-da634b5f.js"></script>
+      <link rel="stylesheet" href="/wavemocards/assets/main-f16c70dc.css">
     </head>
     <body>
         <header class="header h-logined sticky-top">
@@ -55,8 +55,8 @@
                 </a>
             </div>
             <!-- 導覽說明 -->
-            <div class="guid px-24 py-16 bg-main-tint03">
-                <p class="mb-8">
+            <div class="guid px-24 py-12 bg-main-tint03">
+                <p class="mb-4">
                     你可以藉由以下兩種方式「
                     <a class="px-4" href="#emoCardsTitle">情緒卡</a>
                     」、「
@@ -137,7 +137,7 @@
             <div class="titleBar">
                 <h2>情緒表</h2>
             </div>
-            <p class="mb-8 text-gray-550">
+            <p class="mb-4 text-gray-550">
                 🔎 請點擊下方各個情緒名詞，展開詳細情緒資訊。
             </p>
             <p class="mb-32 text-gray-550">
@@ -4389,9 +4389,9 @@
                 </ul>
             </div>
             <div class="me-72">
-                <a href="mailto:wave_emocards@gmail.cooom">
+                <a href="mailto:wave_emocards@gmail.com">
                     <h3>聯絡我們</h3>
-                    <span>wave_emocards@gmail.cooom</span>
+                    <span>wave_emocards@gmail.com</span>
                 </a>
             </div>
         </div>
