--- a/findEmoRelived.html
+++ b/findEmoRelived.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜分類探索｜安心</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-d4a50e68.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-fb47b27b.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-da634b5f.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-f16c70dc.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -3913,9 +3913,9 @@
                 </ul>
             </div>
             <div class="me-72">
-                <a href="mailto:wave_emocards@gmail.cooom">
+                <a href="mailto:wave_emocards@gmail.com">
                     <h3>聯絡我們</h3>
-                    <span>wave_emocards@gmail.cooom</span>
+                    <span>wave_emocards@gmail.com</span>
                 </a>
             </div>
         </div>
