--- a/findMyEmotions.html
+++ b/findMyEmotions.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-d4a50e68.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-fb47b27b.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-da634b5f.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-f16c70dc.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -70,7 +70,7 @@
           <img class="default" src="/wavemocards/assets/findEmoClassified-7f2a59f1.svg" alt="分類探索">
           <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
         </a>
-        <a class="btn-find d-flex flex-column align-items-center" href="findEmoClassified.html">
+        <a class="btn-find d-flex flex-column align-items-center" href="findEmoFree.html">
           <h2>自由探索</h2>
           <img class="default" src="/wavemocards/assets/finEmoFree-e2e984f4.svg" alt="自由探索">
           <img class="hover" src="/wavemocards/assets/findEmoClassifiedHover-eec4bd29.svg" alt="分類探索">
@@ -95,9 +95,9 @@
                 </ul>
             </div>
             <div class="me-72">
-                <a href="mailto:wave_emocards@gmail.cooom">
+                <a href="mailto:wave_emocards@gmail.com">
                     <h3>聯絡我們</h3>
-                    <span>wave_emocards@gmail.cooom</span>
+                    <span>wave_emocards@gmail.com</span>
                 </a>
             </div>
         </div>
