--- a/pages/findEmoStrength2nd.html
+++ b/pages/findEmoStrength2nd.html
@@ -47,7 +47,7 @@
                 <h2>我的情緒強度｜第二次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoAction.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findThanks.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoThanks.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
