--- a/pages/index.html
+++ b/pages/index.html
@@ -22,5 +22,8 @@
 
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <script>
+      console.log('hello')
+    </script>
   </body>
 </html>
