--- a/pages/login.html
+++ b/pages/login.html
@@ -62,5 +62,8 @@
     <script type="module" src="../main.js"></script>
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
     <script type="text/javascript" src="../assets/js/formValidation.js"></script>
+    <script>
+        console.log('login hello')
+      </script>
   </body>
 </html>
