--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>浪潮情緒卡</title>
-    <script type="module" crossorigin src="/wavemocards/assets/main-da634b5f.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-f16c70dc.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
   </head>
   <body>
     <header class="header sticky-top">
@@ -37,5 +37,8 @@
 
     
     <script type="text/javascript" src="../assets/js/mouseoverTitle.js"></script>
+    <script>
+      console.log('hello')
+    </script>
   </body>
 </html>
