--- a/findEmoStrength2nd.html
+++ b/findEmoStrength2nd.html
@@ -7,8 +7,8 @@
     <title>浪潮情緒卡｜找尋我的情緒｜我的情緒強度2nd</title>
     <!-- Bootstrap icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script type="module" crossorigin src="/wavemocards/assets/main-da634b5f.js"></script>
-    <link rel="stylesheet" href="/wavemocards/assets/main-f16c70dc.css">
+    <script type="module" crossorigin src="/wavemocards/assets/main-37cc6587.js"></script>
+    <link rel="stylesheet" href="/wavemocards/assets/main-4b0d98b2.css">
   </head>
   <body>
     <header class="header h-logined sticky-top">
@@ -80,7 +80,7 @@
                 <h2>我的情緒強度｜第二次</h2>
                 <div class="nav-btn d-lg-flex justify-content-end">
                     <a class="btn btn-outline-main c-btn" href="findEmoAction.html">上一步</a>
-                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findThanks.html"><span class="ms-4">下一步</span></a>
+                    <a class="ms-16 btn btn-main c-btn d-flex justify-content-center align-items-center" href="findEmoThanks.html"><span class="ms-4">下一步</span></a>
                 </div>
             </div>
 
